--- a/app/src/main/res/layout/activity_entradas.xml
+++ b/app/src/main/res/layout/activity_entradas.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/gradiente_background">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="500dp"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:background="@drawable/gradiente_background">
+        android:gravity="center_horizontal">
 
         <ImageView
             android:id="@+id/iv_imagen_concierto"
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="#151414"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tv_fecha"
@@ -30,7 +31,8 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="#151414"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tv_lugar"
@@ -38,7 +40,8 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="#151414"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="16dp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/btn_entradas"
@@ -50,15 +53,24 @@
 
     </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_conciertos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mas_conciertos"
+            android:textSize="20sp"
+            android:textColor="#151414"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_entradas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
         </androidx.recyclerview.widget.RecyclerView>
-
     </LinearLayout>
 
 </LinearLayout>
+
