--- a/app/src/main/res/layout/layout_personalizado_conciertos.xml
+++ b/app/src/main/res/layout/layout_personalizado_conciertos.xml
@@ -1,76 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="115dp"
-            android:orientation="vertical"
-            android:background="#1B1919">
-            <TextView
-                android:id="@+id/tv_nombreConcierto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold">
-            </TextView>
-            <TextView
-                android:id="@+id/tv_ciudad"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold">
-            </TextView>
-            <TextView
-                android:id="@+id/tv_lugarConcierto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold">
-            </TextView>
-            <TextView
-                android:id="@+id/tv_fechaConcierto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF">
-            </TextView>
-            <TextView
-                android:id="@+id/tv_generoConcierto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF">
-            </TextView>
-            <TextView
-                android:id="@+id/tv_precioConcierto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold">
-            </TextView>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/iv_concierto"
+            <LinearLayout
+                android:layout_width="250dp"
+                android:layout_height="115dp"
+                android:orientation="vertical"
+                android:background="#1B1919">
+
+                <TextView
+                    android:id="@+id/tv_nombreConcierto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#92C15B"
+                    android:textStyle="bold"
+                    android:textSize="20sp">
+                </TextView>
+                <!--
+                <TextView
+                    android:id="@+id/tv_ciudad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold">
+                </TextView>
+                -->
+                <TextView
+                    android:id="@+id/tv_lugarConcierto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold">
+                </TextView>
+                <TextView
+                    android:id="@+id/tv_fechaConcierto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#FFFFFF">
+                </TextView>
+                <TextView
+                    android:id="@+id/tv_generoConcierto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#FFFFFF">
+                </TextView>
+                <TextView
+                    android:id="@+id/tv_precioConcierto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold">
+                </TextView>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            </ImageView>
+                <ImageView
+                    android:id="@+id/iv_concierto"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
 
-
-
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
