--- a/app/src/main/res/layout/activity_conciertos.xml
+++ b/app/src/main/res/layout/activity_conciertos.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/et_buscador"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Atopa o teu concerto favorito"
+        android:visibility="gone"
+        android:gravity="center"/>
+
     <ListView
         android:id="@+id/lv_conciertos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
     </ListView>
 
