--- a/app/src/main/res/layout/layout_personalizado_conciertos.xml
+++ b/app/src/main/res/layout/layout_personalizado_conciertos.xml
@@ -9,81 +9,64 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/iv_concierto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:background="#1B1919"
+            android:padding="8dp">
 
-            <LinearLayout
-                android:layout_width="250dp"
-                android:layout_height="115dp"
-                android:orientation="vertical"
-                android:background="#1B1919">
+            <TextView
+                android:id="@+id/tv_nombreConcierto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#92C15B"
+                android:textStyle="bold"
+                android:textSize="16sp">
+            </TextView>
 
-                <TextView
-                    android:id="@+id/tv_nombreConcierto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#92C15B"
-                    android:textStyle="bold"
-                    android:textSize="20sp">
-                </TextView>
-                <!--
-                <TextView
-                    android:id="@+id/tv_ciudad"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold">
-                </TextView>
-                -->
-                <TextView
-                    android:id="@+id/tv_lugarConcierto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:id="@+id/tv_fechaConcierto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#FFFFFF">
-                </TextView>
-                <TextView
-                    android:id="@+id/tv_generoConcierto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#FFFFFF">
-                </TextView>
-                <TextView
-                    android:id="@+id/tv_precioConcierto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold">
-                </TextView>
+            <TextView
+                android:id="@+id/tv_lugarConcierto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:textSize="14sp">
+            </TextView>
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_fechaConcierto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp">
+            </TextView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/tv_generoConcierto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp">
+            </TextView>
 
-                <ImageView
-                    android:id="@+id/iv_concierto"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_precioConcierto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:textSize="14sp">
+            </TextView>
 
         </LinearLayout>
 
