--- a/app/src/main/res/layout/activity_conciertos.xml
+++ b/app/src/main/res/layout/activity_conciertos.xml
@@ -12,12 +12,19 @@
         android:layout_height="20dp" />
 
     <EditText
-        android:id="@+id/et_buscador"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/atopa_o_teu_concerto_favorito"
-        android:visibility="gone"
-        android:gravity="center"/>
+    android:id="@+id/et_buscador"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/atopa_o_teu_concerto_favorito"
+    android:visibility="gone"
+    android:gravity="center"
+    android:background="@drawable/edittext_background"
+    android:textColor="@color/black"
+    android:padding="10dp"
+    android:drawablePadding="10dp"
+    android:textSize="16sp"
+    android:fontFamily="sans-serif-light"
+    android:textStyle="bold"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_conciertos"
