--- a/app/src/main/res/layout/activity_entradas.xml
+++ b/app/src/main/res/layout/activity_entradas.xml
@@ -5,6 +5,9 @@
     android:orientation="vertical"
     android:background="@drawable/gradiente_main">
 
+    <include
+    layout="@layout/toolbar_grupo"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
