--- a/app/src/main/res/layout/toolbar_grupo.xml
+++ b/app/src/main/res/layout/toolbar_grupo.xml
@@ -11,28 +11,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/opc_buscador"
-            android:layout_width="0dp"
-            android:layout_height="44dp"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:scaleType="centerInside"
-            android:src="@drawable/lupa" />
+
 
         <ImageView
             android:id="@+id/opc_logo"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:src="@drawable/logo"/>
 
-        <ImageView
-            android:id="@+id/opc_filtro"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/filtro" />
+
 
     </LinearLayout>
 
