--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#03A9F4"/>
+    <solid android:color="#3F7C41"/>
     <corners android:radius="10dp"/>
     <stroke android:color="#FFFFFF" android:width="2dp"/>
 </shape>
