--- a/app/src/main/res/layout/layout_personalizado_conciertos.xml
+++ b/app/src/main/res/layout/layout_personalizado_conciertos.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/iv_concierto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
             android:scaleType="fitXY"
             android:adjustViewBounds="true" />
 
