--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -9,7 +9,7 @@
     </item>
     <item>
         <shape>
-            <solid android:color="#00FF00" />
+            <solid android:color="#204220" />
             <corners android:radius="5dp" />
             <stroke android:color="#FFFFFF" android:width="2dp"/>
         </shape>
