--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#3F7C41"/>
-    <corners android:radius="10dp"/>
-    <stroke android:color="#FFFFFF" android:width="2dp"/>
+    <solid android:color="@color/black"/>
+    <corners android:radius="8dp"/>
+    <stroke android:color="#8BC34A" android:width="2dp"/>
 </shape>
