--- a/app/src/main/res/layout/layout_personalizado_conciertos.xml
+++ b/app/src/main/res/layout/layout_personalizado_conciertos.xml
@@ -1,37 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     app:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/iv_concierto"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true" />
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:background="#1B1919"
-            android:padding="8dp">
+            android:orientation="vertical"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/tv_nombreConcierto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#92C15B"
-                android:textStyle="bold"
-                android:textSize="16sp">
+                android:textSize="12sp"
+                android:textStyle="bold">
+
             </TextView>
 
             <TextView
@@ -39,8 +44,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:textSize="14sp">
+                android:textSize="10sp"
+                android:textStyle="bold">
+
             </TextView>
 
             <TextView
@@ -48,7 +54,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
-                android:textSize="14sp">
+                android:textSize="10sp">
+
             </TextView>
 
             <TextView
@@ -56,7 +63,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
-                android:textSize="14sp">
+                android:textSize="10sp">
+
             </TextView>
 
             <TextView
@@ -64,8 +72,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:textSize="14sp">
+                android:textSize="10sp"
+                android:textStyle="bold">
+
             </TextView>
 
         </LinearLayout>
