--- a/app/src/main/res/layout/toolbar_grupo.xml
+++ b/app/src/main/res/layout/toolbar_grupo.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="@drawable/gradiente_main">
+    android:layout_height="40dp"
+    android:background="@color/color_tool">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,11 +15,10 @@
 
         <ImageView
             android:id="@+id/opc_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo"/>
-
-
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:src="@drawable/icono_hogar"/>
 
     </LinearLayout>
 
