--- a/app/src/main/res/layout/activity_conciertos.xml
+++ b/app/src/main/res/layout/activity_conciertos.xml
@@ -11,6 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"/>
 
+    <ProgressBar
+        android:id="@+id/loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
 
 
 
