--- a/app/src/main/res/layout/toolbar_foot.xml
+++ b/app/src/main/res/layout/toolbar_foot.xml
@@ -21,7 +21,7 @@
             android:src="@drawable/lupa" />
 
         <ImageView
-            android:id="@+id/opc_logo"
+            android:id="@+id/opc_home"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
