--- a/app/src/main/res/layout/toolbar_grupo.xml
+++ b/app/src/main/res/layout/toolbar_grupo.xml
@@ -14,7 +14,7 @@
 
 
         <ImageView
-            android:id="@+id/opc_logo"
+            android:id="@+id/opc_home_entradas"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
