--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -10,13 +10,13 @@
         android:id="@+id/username_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email" />
+        android:hint="@string/email" />
 
     <EditText
         android:id="@+id/password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Contrasinal"
+        android:hint="@string/contrasinal"
         android:inputType="textPassword"
         android:layout_marginBottom="10dp"/>
 
@@ -24,7 +24,7 @@
         android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Crear Usuario"
+        android:text="@string/crear_usuario"
         android:layout_marginBottom="10dp"/>
     <TextView
         android:id="@+id/tv_cuenta_creada"
