--- a/app/src/main/res/layout/toolbar_menu.xml
+++ b/app/src/main/res/layout/toolbar_menu.xml
@@ -26,13 +26,30 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:src="@drawable/logo"/>
-
-        <ImageView
-            android:id="@+id/opc_preguntas"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_pregunta" />
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/btn_gallego"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/icono_galicia" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:id="@+id/btn_espanol"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/icono_espana" />
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
