--- a/app/src/main/res/layout/activity_entradas.xml
+++ b/app/src/main/res/layout/activity_entradas.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gradiente_main">
+    android:background="@drawable/fondo_resto">
 
     <include
-    layout="@layout/toolbar_menu"/>
+        layout="@layout/toolbar_eventos"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,12 +15,12 @@
         android:gravity="center_horizontal">
 
         <ImageView
-            android:id="@+id/iv_imagen_concierto"
+            android:id="@+id/iv_imagen_evento"
             android:layout_width="match_parent"
             android:layout_height="300dp"/>
 
         <TextView
-            android:id="@+id/tv_artista"
+            android:id="@+id/tv_evento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -28,7 +28,7 @@
             android:layout_marginBottom="8dp"
             android:textStyle="bold"/>
         <TextView
-            android:id="@+id/tv_precioConcierto"
+            android:id="@+id/tv_precioEvento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
@@ -66,10 +66,10 @@
 
 
         <TextView
-            android:id="@+id/tv_conciertos"
+            android:id="@+id/tv_eventos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/mas_conciertos"
+            android:text="@string/mas_eventos"
             android:textSize="15sp"
             android:textColor="#151414"
             android:layout_marginTop="16dp"
