--- a/app/src/main/res/layout/layout_personalizado_foot.xml
+++ b/app/src/main/res/layout/layout_personalizado_foot.xml
@@ -7,7 +7,7 @@
     android:background="@color/black">
 
     <ImageView
-        android:id="@+id/iv_concierto"
+        android:id="@+id/iv_evento"
         android:layout_width="180dp"
         android:layout_height="100dp"
         android:scaleType="fitXY" />
@@ -21,7 +21,7 @@
         android:gravity="center">
 
         <TextView
-            android:id="@+id/tv_nombreConcierto"
+            android:id="@+id/tv_nombreEvento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#92C15B"
@@ -29,7 +29,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tv_lugarConcierto"
+            android:id="@+id/tv_lugarEvento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
@@ -37,21 +37,21 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/tv_fechaConcierto"
+            android:id="@+id/tv_fechaEvento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/tv_generoConcierto"
+            android:id="@+id/tv_generoEvento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/tv_precioConcierto"
+            android:id="@+id/tv_precioEvento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
