--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,11 @@
     android:orientation="vertical"
     android:gravity="center">
 
+
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:background="@drawable/logo">
+        android:background="@drawable/logo_mejorado2">
 
     </ImageView>
 
