--- a/app/src/main/res/layout/toolbar_eventos.xml
+++ b/app/src/main/res/layout/toolbar_eventos.xml
@@ -18,7 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="35dp"
             android:layout_weight="1"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo_mejorado2"/>
     </LinearLayout>
 
 </androidx.appcompat.widget.Toolbar>
