opcion ingles, poniendo mas conciertos

--- a/app/src/main/res/layout/toolbar_idiomas.xml
+++ b/app/src/main/res/layout/toolbar_idiomas.xml
@@ -12,22 +12,37 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/btn_gallego"
+            android:id="@+id/btn_ingles"
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
             android:layout_weight="1"
-            android:src="@drawable/icono_galicia" />
+            android:src="@drawable/bandera_inglesa"
+            android:layout_gravity="center"/>
 
         <Space
             android:layout_width="10dp"
             android:layout_height="match_parent" />
 
         <ImageView
-            android:id="@+id/btn_espanol"
+            android:id="@+id/btn_gallego"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:src="@drawable/icono_espana" />
+            android:src="@drawable/icono_galicia" />
+
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
+
+        <ImageView
+            android:id="@+id/btn_espanol"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:src="@drawable/icono_espana"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
