--- a/app/src/main/res/drawable/gradiente_main.xml
+++ b/app/src/main/res/drawable/gradiente_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/fondo_galicia"/>
+    android:src="@drawable/mapagal"
+    android:gravity="center"/>
 <!--
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
