--- a/app/src/main/res/layout/activity_entradas.xml
+++ b/app/src/main/res/layout/activity_entradas.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_corazonNegro"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/corazon1"
+        android:src="@drawable/corazon_negro"
         android:layout_gravity="end">
 
     </ImageView>
@@ -19,7 +19,7 @@
         android:id="@+id/iv_corazonRojo"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/corazon1"
+        android:src="@drawable/corazon_rojo"
         android:layout_gravity="end"
         android:visibility="gone">
 
@@ -27,7 +27,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="480dp"
+        android:layout_height="470dp"
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:textColor="#151414"
+            android:textColor="#92C15B"
             android:layout_marginBottom="8dp"
             android:textStyle="bold"/>
         <TextView
@@ -75,13 +75,15 @@
             android:id="@+id/btn_entradas"
             android:layout_width="200sp"
             android:layout_height="50dp"
+            android:background="@drawable/button_style"
             android:text="@string/mercar_entradas"
-            android:textStyle="bold|normal"
-            android:background="@drawable/button_style"/>
+            android:textStyle="bold|normal" />
 
     </LinearLayout>
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/tv_eventos"
             android:layout_width="wrap_content"
@@ -99,8 +101,15 @@
             android:layout_weight="1">
         </androidx.recyclerview.widget.RecyclerView>
 
+
+
+
+
+
     <include
         layout="@layout/toolbar_grupo"/>
+
+    </LinearLayout>
 
 </LinearLayout>
 
