--- a/app/src/main/res/layout/activity_eventos.xml
+++ b/app/src/main/res/layout/activity_eventos.xml
@@ -41,7 +41,7 @@
         android:id="@+id/ll_filtro_ciudad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:gravity="center_vertical"
         android:visibility="gone"
         android:background="@drawable/edittext_background">
@@ -54,31 +54,46 @@
             android:textSize="16sp"
             android:fontFamily="sans-serif-light"
             android:textStyle="bold"
-            android:paddingLeft="16dp"/>
-
-        <CheckBox
-            android:id="@+id/cb_acoruna"
+            android:paddingLeft="16dp"
+            android:layout_gravity="center"/>
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/a_corunha" />
+            android:orientation="vertical">
+            <CheckBox
+                android:id="@+id/cb_acoruna"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/a_corunha" />
 
-        <CheckBox
-            android:id="@+id/cb_pontevedra"
+            <CheckBox
+                android:id="@+id/cb_pontevedra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/pontevedra" />
+
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pontevedra" />
+            android:orientation="vertical">
+            <CheckBox
+                android:id="@+id/cb_ourense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ourense" />
 
-        <CheckBox
-            android:id="@+id/cb_ourense"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ourense" />
+            <CheckBox
+                android:id="@+id/cb_lugo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lugo" />
 
-        <CheckBox
-            android:id="@+id/cb_lugo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/lugo" />
+        </LinearLayout>
+
+
+
+
 
     </LinearLayout>
 
